@@ -5,7 +5,6 @@ import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import uk.gov.companieshouse.api.testdata.exception.DataException;
@@ -92,7 +91,7 @@ public class CertifiedCopiesServiceImpl implements DataService<CertificatesRespo
                     capital.setFigure(c.getFigure());
                     return capital;
                 })
-                .collect(Collectors.toList());
+                .toList();
             filingHistoryDescriptionValues.setCapital(capitalList);
         }
 
@@ -157,7 +156,7 @@ public class CertifiedCopiesServiceImpl implements DataService<CertificatesRespo
                         itemCosts.setProductType(itemCostsSpec.getProductType());
                         return itemCosts;
                     })
-                    .collect(Collectors.toList());
+                    .toList();
             certifiedCopies.setItemCosts(itemCostsList);
         }
         certifiedCopies.setItemOptions(itemOptions);
